--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,10 +6,10 @@
 	<display-name>dubbo-consumer</display-name>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring-mvc.xml,classpath:spring-dubbo-consumer.xml</param-value>
+		<param-value>classpath:spring-dubbo-consumer.xml</param-value>
 	</context-param>
 	
-	<filter>
+<filter>
 		<description>字符集过滤器</description>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -23,8 +23,14 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
-	
+	<listener>
+		<description>spring监听器</description>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<!-- 防止spring内存溢出监听器 -->
+	<listener>
+		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
+	</listener>
 	<!-- spring mvc servlet -->
 	<servlet>
 		<description>spring mvc servlet</description>
@@ -48,6 +54,5 @@
 	<session-config>
 		<session-timeout>15</session-timeout>
 	</session-config>
-	
 	 
 </web-app>
